--- a/app_config.ini
+++ b/app_config.ini
@@ -1,5 +1,5 @@
 [Settings]
-path = C:/Users/james/Music/youtube downloaded/Long nightcore
+path = C:/Users/james/Music/youtube downloaded/MINI
 threads = 5
 audio_format = m4a
 video_format = mp4
