--- a/app_config.ini
+++ b/app_config.ini
@@ -1,9 +1,9 @@
 [Settings]
-path = C:/Users/james/Music/youtube downloaded/MINI
-threads = 5
+path = C:/Users/james/Music/youtube downloaded/Long nightcore
+threads = 4
 audio_format = m4a
 video_format = mp4
-playlist = 10
+playlist = 25
 server_location = FR
 download_type = audio
 
