Increased playlist default max downloads

--- a/app_config.ini
+++ b/app_config.ini
@@ -1,8 +1,9 @@
 [Settings]
-path = C:/Users/james/Music/youtube downloaded/MINI
+path = C:/Users/james/Music/youtube downloaded
 threads = 4
 audio_format = m4a
 video_format = mp4
-playlist = 10
+playlist = 25
 server_location = FR
 download_type = audio
+
