Fixed some playlists fail to create os dir because of weird title

--- a/app_config.ini
+++ b/app_config.ini
@@ -3,7 +3,8 @@ path = C:/Users/james/Music/youtube downloaded
 threads = 4
 audio_format = m4a
 video_format = mp4
-playlist = 25
+playlist = 2
 server_location = FR
 download_type = audio
+download_thumbnail = false
 
